src/sa_web/static/css/default.css
/* =Base Styles
-------------------------------------------------------------- */

html {
}
body {
  min-height: 100%;
  text-align: left;
}

/* A helper to let the JS know what kind of layout we're using */
body:after {
  content: "mobile";
  display: none;
}

/* Links */
a, a:active, a:visited,
label, label:active, label:visited {
  color: #36454f;
}
a:hover,
label:hover {
  color: #00aaff;
}
a:hover, a:active {
  outline: none;
}

/* Typography */
body {
  line-height: 1.25;
}
body, select, input, textarea {
  /*color: #555;*/
  /*font-family: "Helvetica Neue", Arial, Helvetica, serif;*/
  font-family: 'Roboto', sans-serif;

  color: #36454f;
}
h1, h2, h3, h4, h5, h6 {
  margin: 0 0 0.25em 0;
}
h1 {
  font-size: 2em;
}
h2 {
  font-size: 2em;
}
h3 {
  font-size: 1.75em;
}
h4 {
  font-size: 1.5em;
}
h5 {
  font-size: 1.25em;
}
h6 {
  font-size: 1em;
  text-transform: uppercase;
}
p {
  margin: 0 0 1.5em;
}
ul,
ol,
dl {
  margin-bottom: 0.75em;
}
li {
  padding-bottom: 0.75em;
}
nav ul,
nav ol,
.unstyled-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
nav li,
.unstyled-list li {
  padding-bottom: 0;
}
/*nav li,*/
/*.unstyled-list li:hover {*/
  /*background:rgba(0, 127, 191, 0.57);*/
/*}*/
strong {
  font-weight: 800;
}
hr {
  margin: 1.5em 0;
  border: 1px solid #eeeeee;
  border-top-color: rgba(0,0,0,0.2);
  border-bottom-color: rgba(255,255,255,0.75);
  border-right: 0;
  border-left: 0;
}

/* Buttons */
.btn,
.btn:visited,
.btn:link {
  display: inline-block;
  *display: inline;
  *zoom: 1;
  padding: 0.325em 0.625em;
  margin-bottom: 0;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  color: #007fbf;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #a3c7d9;
  box-shadow: -0.25em 0.25em 0 rgba(0,0,0,0.1);
  font-weight: 600;
  border: 3px solid rgba(0,0,0,0.05);
  border-radius: 3px;
}
.btn:hover {
  background-color: #93b7c9;
}
.btn-primary,
.btn-primary:visited,
.btn-primary:link {
  background-color: #00aaff;
  color: #fff;
  background-color:rgba(242, 82, 24, 0.89);
}
.btn-primary:hover {
  background-color: #007fbf;
}
.btn-secondary,
.btn-secondary:visited,
.btn-secondary:link {
  background-color: #ccc;
  color: #007fbf;
  background: none;
  border: none;
  box-shadow: none;
}

.btn-secondary:hover {
  background-color: #007fbf;
  color: #fff;
}
.btn-disabled,
.btn-disabled:visited,
.btn-disabled:link,
.btn-disabled:hover {
  background-color: #eee;
  color: #ccc;
  box-shadow: none;
}
.btn-block,
.btn-block:visited,
.btn-block:link {
  clear: both;
  display: block;
  padding: 0.5em 0.75em;
  width: 100%;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}
.btn-large {
  font-size: 1.25em;
  padding: 0.75em 1em 0.5em;
}
.btn-small {
  font-size: 0.75em;
}

/* Forms */
form {
}
fieldset {
  border: 0;
  margin: 0;
  padding: 0 0 1.2em;
}
label {
  font-size: 0.75em;
  /*text-transform: uppercase;*/
  /*color: #999;*/
  margin-right: 0.5em;

  padding-bottom: 0;
}
label small {
  text-transform: none;
}
input[type=date],
input[type=datetime],
input[type=datetime-local],
input[type=email],
input[type=month],
input[type=number],
input[type=password],
input[type=tel],
input[type=text],
input[type=time],
input[type=url],
input[type=week],
textarea {
  outline: 0;
  border: 0.25em solid #a3c7d9;
  border-radius: 0;
  padding: 0.5em;
  display: block;
  width: 100%;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}
input:focus,
textarea:focus {
  outline: 2px solid #007fbf;
}
textarea {
  height: 6.5em;
  resize: none;
}

/* Old IE does not like this to be combine with :invalid rules.
   It will ignore it! */
.form-submitted .gatekeeper-invalid {
  outline: 2px solid #b2182b;
}

.form-submitted input:invalid,
.form-submitted textarea:invalid,
.form-submitted select:invalid {
  outline: 2px solid #b2182b;
}

.fileinput-container {
  position: relative;
  overflow: hidden;
  white-space: nowrap;
}
.fileinput-container input {
  position: absolute;
  right: 0;
  bottom: 0;
  margin: 0;
  padding: 0;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}
.fileinput-name {
  display: inline-block;
}
.form-spinner {
  clear: both;
  padding: 1em;
}

/* Images */
img {
  max-width: 100%;
  height: auto;
}
.icon-inline {
  height: 1.5em;
  width: auto;
  margin: 0 0.25em -0.325em 0.5em;
}
.icon-muted {
  opacity: 0.75;
}


/* =Nonsemantic Base Styles
-------------------------------------------------------------- */

.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; visibility: hidden; }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }

/* Hide for both screenreaders and browsers */
.is-hidden, .hidden { display: none; visibility: hidden; }
/* Hide only visually, but have it available for screenreaders */
.is-screen-reader-text,
.is-visuallyhidden {
  position: absolute !important;
  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
  clip: rect(1px, 1px, 1px, 1px);
}
/* Hide visually and from screenreaders, but maintain layout */
.is-invisible { visibility: hidden; }

.nobreak { white-space: nowrap; }
.capitalize { text-transform: capitalize; }


/* =Header
-------------------------------------------------------------- */

#site-header {
  background-color: white;
  position: relative;
  z-index: 40;
  padding: 0.5em;
  box-shadow: 0 0.125em 0 rgba(0,0,0,0.2);
}

#site-title {
  /*color: #F25218;*/ /*too much like 'simpsons'*/
  font-size: .75em;
  font-family: 'Rock Salt', cursive;
  text-shadow: 1px -1px 1px rgba(0,0,0,0.5);
  float: left;
  margin: 0 0.5em 0 0;
  padding: 0;
}
.has-pages #site-title {
  padding-left: 3.25em;
}
#site-title a:link,
#site-title a:visited {
  display: block;
  font-size: 2em;
  line-height: 1.25;
  text-decoration: none;
  /*color: #F25218;*/
  color: #228b22;
}
#site-title a:hover {
  /*color: #FF8B61;*/
  color: #abde76;
}
/* ... */

